--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-click~=7.0
+click==7.0
 exit
 folium==0.13.0
 numpy==1.22.2
@@ -10,4 +10,3 @@ streamlit==1.13.0
 streamlit_folium==0.6.15
 spacy>=3.0.0,<4.0.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
-typer==0.4.0
